Edited markdown. Added  descriptive statistics.

--- a/natural_gas.ipynb
+++ b/natural_gas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,13 @@
     "* Open price\n",
     "* Close price\n",
     "* Low price\n",
-    "* Volume (MMBtu)\n",
-    "Note that while not provided by the dataaset, the units for volume are likely million British thermal units or MMBtus. This is a standard unit. Similarly, prices for natural gas contracts are often given in dollars per MMBtu. When so presented, the values are similar to the ones listed here (see, e.g. [here](eia.gov/dnav/ng/hist/rngc1d.htm))."
+    "* Volume\n",
+    "Prices for natural gas contracts are often given in dollars per MMBtu, a standard energy unit used in the natural gas industry. When so presented, the values are similar to the ones listed here (see, e.g. [here](eia.gov/dnav/ng/hist/rngc1d.htm))."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4  2000-01-10  2.180  2.255  2.165  2.216   28916      USD"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "array(['USD'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        " (5708, 6))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4 2000-01-10  2.180  2.255  2.165  2.216   28916   0.025          1.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -386,6 +386,157 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Change</th>\n",
+       "      <th>Change Sign</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5708.000000</td>\n",
+       "      <td>5708.000000</td>\n",
+       "      <td>5708.000000</td>\n",
+       "      <td>5708.000000</td>\n",
+       "      <td>5708.000000</td>\n",
+       "      <td>5708.000000</td>\n",
+       "      <td>5708.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.464327</td>\n",
+       "      <td>4.565091</td>\n",
+       "      <td>4.360767</td>\n",
+       "      <td>4.458676</td>\n",
+       "      <td>92727.729152</td>\n",
+       "      <td>0.001045</td>\n",
+       "      <td>-0.001927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.205768</td>\n",
+       "      <td>2.264377</td>\n",
+       "      <td>2.145447</td>\n",
+       "      <td>2.202381</td>\n",
+       "      <td>64366.670342</td>\n",
+       "      <td>0.179394</td>\n",
+       "      <td>0.995432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.441000</td>\n",
+       "      <td>1.567000</td>\n",
+       "      <td>1.432000</td>\n",
+       "      <td>1.482000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-2.299000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.849750</td>\n",
+       "      <td>2.900750</td>\n",
+       "      <td>2.797750</td>\n",
+       "      <td>2.850000</td>\n",
+       "      <td>37428.750000</td>\n",
+       "      <td>-0.058000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.866000</td>\n",
+       "      <td>3.948500</td>\n",
+       "      <td>3.790500</td>\n",
+       "      <td>3.862500</td>\n",
+       "      <td>79916.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.530000</td>\n",
+       "      <td>5.654000</td>\n",
+       "      <td>5.380000</td>\n",
+       "      <td>5.523000</td>\n",
+       "      <td>137690.500000</td>\n",
+       "      <td>0.058000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>15.160000</td>\n",
+       "      <td>15.780000</td>\n",
+       "      <td>14.851000</td>\n",
+       "      <td>15.378000</td>\n",
+       "      <td>459196.000000</td>\n",
+       "      <td>2.699000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open         High          Low        Close         Volume  \\\n",
+       "count  5708.000000  5708.000000  5708.000000  5708.000000    5708.000000   \n",
+       "mean      4.464327     4.565091     4.360767     4.458676   92727.729152   \n",
+       "std       2.205768     2.264377     2.145447     2.202381   64366.670342   \n",
+       "min       1.441000     1.567000     1.432000     1.482000       0.000000   \n",
+       "25%       2.849750     2.900750     2.797750     2.850000   37428.750000   \n",
+       "50%       3.866000     3.948500     3.790500     3.862500   79916.000000   \n",
+       "75%       5.530000     5.654000     5.380000     5.523000  137690.500000   \n",
+       "max      15.160000    15.780000    14.851000    15.378000  459196.000000   \n",
+       "\n",
+       "            Change  Change Sign  \n",
+       "count  5708.000000  5708.000000  \n",
+       "mean      0.001045    -0.001927  \n",
+       "std       0.179394     0.995432  \n",
+       "min      -2.299000    -1.000000  \n",
+       "25%      -0.058000    -1.000000  \n",
+       "50%       0.000000     0.000000  \n",
+       "75%       0.058000     1.000000  \n",
+       "max       2.699000     1.000000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -398,12 +549,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "Calculates the rolling average over the past avg_length days\n",
-    "Takes in the feature for which to calculate the rolling average and the number of days to use as a subset to calculate an average\n",
-    "Returns the rolling average for the feature.\n",
-    "'''\n",
+    "\n",
     "def make_rolling_average(feature, avg_length=30):\n",
+    "    '''\n",
+    "    Calculates the rolling average over the past avg_length days\n",
+    "    Parameters:\n",
+    "        the feature for which to calculate the rolling average\n",
+    "        avg_length: the number of days to use as a subset to calculate an average\n",
+    "    Returns: the rolling average for the feature.\n",
+    "    '''\n",
     "    values = df[feature].values\n",
     "    rolling_average = []\n",
     "    for i in range(values.shape[0]):\n",
@@ -443,7 +597,7 @@
     "    if feature != 'Volume':\n",
     "        axes[i].set_ylabel(f'{feature} (USD)')\n",
     "    elif feature == 'Volume':\n",
-    "        axes[i].set_ylabel(f'{feature} (MMBtu)')\n",
+    "        axes[i].set_ylabel(f'{feature}')\n",
     "    if feature == 'Volume' or feature == 'Change':\n",
     "        sns.lineplot(data=df, x='Date', y=make_rolling_average(feature), ax=axes[i])\n",
     "        axes[i].legend(labels=[f'Daily {feature}', f'Average'])\n",
@@ -522,7 +676,7 @@
     "    if feature != 'Volume':\n",
     "        axes[i].set_xlabel(f'{feature} (USD)')\n",
     "    elif feature == 'Volume':\n",
-    "        axes[i].set_ylabel(f'{feature} (MMBtu)')\n",
+    "        axes[i].set_ylabel(f'{feature}')\n",
     "\n",
     "    if feature == 'Change':\n",
     "        sns.histplot(data=df,x=feature, ax=axes[i], bins=100)\n",
@@ -896,7 +1050,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build Model"
+    "## Build Model\n",
+    "The model used is a simple LSTM model, followed by dense layers for classification. A dropout layer is used for regularization."
    ]
   },
   {
@@ -1153,7 +1308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the above prediction as an example, it is safe to make an initial assumption that impropere volume predictions are driving the mean absolute error."
+    "When looking at the mean absolute error, it must be recalled that the model is predicting mostly features with means of the order 1, but it is also predicting volume which has a mean of the order $10^{4}$. So errors for the volume are likely to distort the mean absolute error."
    ]
   },
   {
@@ -1205,7 +1360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above, there is a linear relationship between all of the predicted and actual prices, suggesting a decent quality of predictions. The changes in price and volumes, however, are not predicted accurately."
+    "Above, there is a linear relationship between all of the predicted and actual prices, suggesting a decent quality of predictions. The changes in price and volumes, however, are not predicte accurately."
    ]
   },
   {
@@ -1277,7 +1432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
